# Operational-Systems

./: CMakeLists.txt  README.md  lab2_test.cpp
1Laba/doc/: report1.docx
2Laba/: CMakeLists.txt  README.md  main.cpp
2Laba/doc/: report2.docx
2Laba/include/: parent.h
2Laba/src/: child.cpp  parent.cpp
3Laba/: CMakeLists.txt  main.cpp
3Laba/doc/: report3.docx
3Laba/include/: laba3OS.h  utils.h
3Laba/src/: laba3OS.cpp
4Laba/: CMakeLists.txt  README.md  main.cpp
4Laba/doc/: report4.docx
4Laba/include/: parent.h  string_to_vector.h
4Laba/src/: child.cpp  parent.cpp  string_to_vector.cpp
5Laba/: CMakeLists.txt  first.cpp  lib1.cpp  lib2.cpp  second.cpp
5Laba/doc/: report5.docx
6Laba/: CMakeLists.txt  calculation_node.cpp  control_node.cpp  my_zmq.h  topology.h
6Laba/doc/: report6.docx
KP/: CMakeLists.txt  a.cpp  b.cpp  c.cpp
KP/doc/: KP.docx
tests/: lab3_test.cpp  lab4_test.cpp  lab5_test.cpp
